opam-version: "1.2"

version: "dev"
homepage: "https://github.com/ocsigen/lwt_log"
doc: "https://github.com/ocsigen/lwt_log/blob/master/src/core/lwt_log_core.mli"
bug-reports: "https://github.com/ocsigen/lwt_log/issues"
license: "LGPL"

authors: [
  "Shawn Wagner"
  "Jérémie Dimino"
]
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "https://github.com/ocsigen/lwt_log.git"

depends: [
  "dune" {build}
  "lwt" {>= "4.0.0"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
