opam-version: "2.0"

synopsis: "Lwt logging library (deprecated)"

version: "dev"
license: "LGPL"
homepage: "https://github.com/ocsigen/lwt_log"
doc: "https://github.com/ocsigen/lwt_log/blob/master/src/core/lwt_log_core.mli"
bug-reports: "https://github.com/ocsigen/lwt_log/issues"

authors: [
  "Shawn Wagner"
  "Jérémie Dimino"
]
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "git+https://github.com/ocsigen/lwt_log.git"

depends: [
  "dune" {>= "1.0"}
  "lwt" {>= "4.0.0"}
  "ocaml" {>= "4.03"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
