opam-version: "2.0"

synopsis: "Lwt logging library (deprecated)"
license: ["LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception" "BSD-3-Clause"]
homepage: "https://github.com/ocsigen/lwt_log"
doc: "https://github.com/ocsigen/lwt_log/blob/master/src/core/lwt_log_core.mli"
bug-reports: "https://github.com/ocsigen/lwt_log/issues"

authors: [
  "Shawn Wagner"
  "Jérémie Dimino"
]
maintainer: "Raphaël Proust <code@bnwr.net>"
dev-repo: "git+https://github.com/ocsigen/lwt_log.git"

depends: [
  "dune" {>= "1.0"}
  "lwt" {>= "4.0.0"}
  "ocaml" {>= "4.03"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
